# crosstag

./: .gitignore  CMakeLists.txt  README.md  sqlschema.dbml
src/: main.cpp  tagFunctions.h  tagFunctionsWindows.cpp  winFunctions.cpp  winFunctions.h
